objects/Internal_Release__c.object
<CustomObject>
    <fields>
        <fullName>First_Release_Date__c</fullName>
        <inlineHelpText>The first date that releases should be planned for this product and version</inlineHelpText>
        <label>First Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Release_Legacy_ID__c</fullName>
        <label>Internal Release Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Release_Date__c</fullName>
        <inlineHelpText>The last date that releases should be planned for this product and version</inlineHelpText>
        <label>Last Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>NET</fullName>
                </value>
                <value>
                    <fullName>Predict</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Internal Release</label>
    <listViews>
        <fullName>Optima_Internal_Releases</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>First_Release_Date__c</columns>
        <columns>Last_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Optima Internal Releases</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Live_Internal_Releases</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>First_Release_Date__c</columns>
        <columns>Last_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </filters>
        <label>Optima Live Internal Releases</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_Predict_Internal_Releases</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>First_Release_Date__c</columns>
        <columns>Last_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
            <value>Predict</value>
        </filters>
        <label>Optima Predict Internal Releases</label>
        <sharedTo>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optima_future_internal_releases</fullName>
        <columns>Product__c</columns>
        <columns>NAME</columns>
        <columns>First_Release_Date__c</columns>
        <columns>Last_Release_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Release_Date__c</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Optima Future Internal Releases</label>
        <sharedTo>
            <group>Optima_Sales</group>
            <group>Optima_Support</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Releases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>